# SpecRhythm-vllm-plugin

./: .gitignore  README.md  pyproject.toml
paper/: ATC26_SpecRhythm_extended_abstract_revised.tex
scripts/: check_vllm_plugin.py  inspect_vllm.py  inspect_vllm_internals.py  run_smoke_import.py  run_vllm_ar_smoke.py  run_vllm_spec_smoke.py
src/vllm_specrhythm/: __init__.py  config.py  metrics.py  patching.py  plugin.py
src/vllm_specrhythm/scheduler/: __init__.py  budget_shaper.py  dual_batch.py  slo_state.py
